--- a/pom.xml
+++ b/pom.xml
@@ -159,6 +159,11 @@
       <version>1.18.30</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.modelmapper</groupId>
+      <artifactId>modelmapper</artifactId>
+      <version>3.1.1</version>
+    </dependency>
   </dependencies>
 
   <build>
